Jann 30/objects/Deal_RFA_Link__c.object
<CustomObject>
    <fields>
        <fullName>Control_Number__c</fullName>
        <formula>RFA__r.ControlNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Control Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>RFA Links</relationshipLabel>
        <relationshipName>RFA_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>RFA Links</relationshipLabel>
        <relationshipName>RFA_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Amount_USD__c</fullName>
        <formula>RFA__r.RequestAmountUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Title__c</fullName>
        <formula>RFA__r.RequestTitle__c</formula>
        <label>Request Title</label>
        <type>Text</type>
    </fields>
    <label>RFA Link</label>
    <nameField>
        <displayFormat>RFA-L{0000}</displayFormat>
        <label>RFA Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFA Links</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>